Bug 768786 - Offscreen state is not exposed under certain circumstances, r=tbsaunde